--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -340,41 +340,54 @@
             <div class="interpretability-grid">
                 <div class="importance-card">
                     <h3>Importância das Features</h3>
+                    <div class="importance-legend">
+                        <span class="legend-item"><span class="legend-color" style="background: #e74c3c;"></span>Pressão Arterial</span>
+                        <span class="legend-item"><span class="legend-color" style="background: #2ecc71;"></span>Demografia</span>
+                        <span class="legend-item"><span class="legend-color" style="background: #3498db;"></span>Antropométricas</span>
+                        <span class="legend-item"><span class="legend-color" style="background: #9b59b6;"></span>Biomarcadores</span>
+                        <span class="legend-item"><span class="legend-color" style="background: #f39c12;"></span>Medicamentos</span>
+                        <span class="legend-item"><span class="legend-color" style="background: #1abc9c;"></span>Estilo de Vida</span>
+                    </div>
                     <div class="importance-bars">
-                        <div class="importance-bar">
+                        <div class="importance-bar" title="Categoria: Pressão Arterial | Pressão arterial sistólica (mmHg) - Principal indicador de hipertensão">
                             <span class="feature-name">Pressão Sistólica</span>
                             <div class="bar-container">
                                 <div class="bar" style="width: 100%; background: #e74c3c;"></div>
                             </div>
                             <span class="importance-value">45.8%</span>
+                            <span class="feature-category">Pressão Arterial</span>
                         </div>
-                        <div class="importance-bar">
+                        <div class="importance-bar" title="Categoria: Pressão Arterial | Pressão arterial diastólica (mmHg) - Pressão durante relaxamento cardíaco">
                             <span class="feature-name">Pressão Diastólica</span>
                             <div class="bar-container">
                                 <div class="bar" style="width: 57%; background: #e74c3c;"></div>
                             </div>
                             <span class="importance-value">26.3%</span>
+                            <span class="feature-category">Pressão Arterial</span>
                         </div>
-                        <div class="importance-bar">
+                        <div class="importance-bar" title="Categoria: Demografia | Idade do paciente em anos">
                             <span class="feature-name">Idade</span>
                             <div class="bar-container">
                                 <div class="bar" style="width: 15%; background: #2ecc71;"></div>
                             </div>
                             <span class="importance-value">7.0%</span>
+                            <span class="feature-category">Demografia</span>
                         </div>
-                        <div class="importance-bar">
+                        <div class="importance-bar" title="Categoria: Antropométricas | Índice de Massa Corporal (kg/m²) - Indicador de obesidade">
                             <span class="feature-name">IMC</span>
                             <div class="bar-container">
                                 <div class="bar" style="width: 12%; background: #3498db;"></div>
                             </div>
                             <span class="importance-value">5.8%</span>
+                            <span class="feature-category">Antropométricas</span>
                         </div>
-                        <div class="importance-bar">
+                        <div class="importance-bar" title="Categoria: Biomarcadores | Colesterol total (mg/dL) - Fator de risco cardiovascular">
                             <span class="feature-name">Colesterol Total</span>
                             <div class="bar-container">
                                 <div class="bar" style="width: 7%; background: #9b59b6;"></div>
                             </div>
                             <span class="importance-value">3.3%</span>
+                            <span class="feature-category">Biomarcadores</span>
                         </div>
                     </div>
                 </div>
