--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#interpretabilidade">Interpretabilidade</a></li>
                 <li><a href="#deploy">Deploy</a></li>
                 <li><a href="#equipe">Equipe</a></li>
+                <li><a href="#referencias">Referências</a></li>
             </ul>
             <div class="nav-actions">
                 <a href="https://github.com/anderson-ferreira-83/traballho_conclussao_risco_hipertensao"
@@ -744,6 +745,37 @@
                         <li>Rubens Jose Collin</li>
                         <li>Tiago Dias Borges</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- References Section -->
+    <section class="section section-alt" id="referencias">
+        <div class="container">
+            <h2 class="section-title">Referências</h2>
+            <p class="section-subtitle">Artigos científicos que fundamentam a metodologia utilizada</p>
+
+            <div class="references-list">
+                <div class="reference-item">
+                    <span class="ref-number">[1]</span>
+                    <p class="ref-text">M. Kivrak, U. Avci, H. Uzun, and C. Ardic, "The impact of the SMOTE method on machine learning and ensemble learning performance results in addressing class imbalance in data used for predicting total testosterone deficiency in type 2 diabetes patients," <em>Diagnostics</em>, vol. 14, no. 23, Art. no. 2634, Nov. 2024, doi: <a href="https://doi.org/10.3390/diagnostics14232634" target="_blank">10.3390/diagnostics14232634</a>.</p>
+                </div>
+                <div class="reference-item">
+                    <span class="ref-number">[2]</span>
+                    <p class="ref-text">A. Fernández, S. García, F. Herrera, and N. V. Chawla, "SMOTE for learning from imbalanced data: Progress and challenges, marking the 15-year anniversary," <em>J. Artif. Intell. Res.</em>, vol. 61, pp. 863–905, 2018, doi: <a href="https://doi.org/10.1613/jair.1.11192" target="_blank">10.1613/jair.1.11192</a>.</p>
+                </div>
+                <div class="reference-item">
+                    <span class="ref-number">[3]</span>
+                    <p class="ref-text">M. Talebi Moghaddam, Y. Jahani, Z. Arefzadeh, A. Dehghan, M. Khaleghi, M. Sharafi, and G. Nikfar, "Predicting diabetes in adults: Identifying important features in unbalanced data over a 5-year cohort study using machine learning algorithm," <em>BMC Med. Res. Methodol.</em>, vol. 24, Art. no. 220, Sep. 2024, doi: <a href="https://doi.org/10.1186/s12874-024-02341-z" target="_blank">10.1186/s12874-024-02341-z</a>.</p>
+                </div>
+                <div class="reference-item">
+                    <span class="ref-number">[4]</span>
+                    <p class="ref-text">Y. Li, Y. Yang, P. Song, L. Duan, and R. Ren, "An improved SMOTE algorithm for enhanced imbalanced data classification by expanding sample generation space," <em>Sci. Rep.</em>, vol. 15, Art. no. 23521, Jul. 2025, doi: <a href="https://doi.org/10.1038/s41598-025-09506-w" target="_blank">10.1038/s41598-025-09506-w</a>.</p>
+                </div>
+                <div class="reference-item">
+                    <span class="ref-number">[5]</span>
+                    <p class="ref-text">J. Zhu, S. Pu, J. He, D. Su, W. Cai, X. Xu, and H. Liu, "Processing imbalanced medical data at the data level with assisted-reproduction data as an example," <em>BioData Mining</em>, vol. 17, Art. no. 29, Sep. 2024, doi: <a href="https://doi.org/10.1186/s13040-024-00384-y" target="_blank">10.1186/s13040-024-00384-y</a>.</p>
                 </div>
             </div>
         </div>
