--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -430,8 +430,8 @@
                 <div class="importance-card">
                     <h3>Importância das Features</h3>
                     <p class="card-explanation">
-                        Mostra quanto cada variável contribui para a decisão do modelo. Barras maiores indicam maior influência na predição.
-                        As cores identificam a categoria clínica de cada variável.
+                        <strong>O que mostra:</strong> Quanto cada variável contribui para a decisão do modelo. Barras maiores indicam maior influência na predição.
+                        As cores identificam a categoria clínica de cada variável. Passe o mouse sobre cada barra para ver detalhes adicionais.
                     </p>
                     <div class="importance-legend">
                         <span class="legend-item"><span class="legend-color" style="background: #e74c3c;"></span>Pressão Arterial</span>
@@ -488,9 +488,9 @@
                 <div class="category-card">
                     <h3>Importância por Categoria Clínica</h3>
                     <p class="card-explanation">
-                        Agrupa as variáveis por categoria médica. O tamanho de cada círculo representa a contribuição total
+                        <strong>O que mostra:</strong> Agrupamento das variáveis por categoria médica. O tamanho de cada círculo representa a contribuição total
                         daquela categoria para as predições do modelo. Note como a Pressão Arterial domina, o que está
-                        alinhado com o conhecimento médico sobre hipertensão.
+                        alinhado com o conhecimento médico estabelecido sobre hipertensão.
                     </p>
                     <div class="category-chart">
                         <div class="category-item">
@@ -524,7 +524,7 @@
             <div class="threshold-section">
                 <h3>Thresholds Clínicos Recomendados</h3>
                 <p class="threshold-explanation">
-                    O <strong>threshold</strong> (limiar de decisão) determina a partir de qual probabilidade o modelo classifica
+                    <strong>O que mostra:</strong> O <strong>threshold</strong> (limiar de decisão) determina a partir de qual probabilidade o modelo classifica
                     um paciente como "em risco". Um threshold mais baixo (ex: 0.30) detecta mais casos, mas gera mais alarmes falsos.
                     Um threshold mais alto (ex: 0.80) é mais preciso, mas pode deixar passar alguns casos.
                     A escolha depende do contexto clínico: triagem populacional vs. confirmação diagnóstica.
@@ -759,23 +759,23 @@
             <div class="references-list">
                 <div class="reference-item">
                     <span class="ref-number">[1]</span>
-                    <p class="ref-text">M. Kivrak, U. Avci, H. Uzun, and C. Ardic, "The impact of the SMOTE method on machine learning and ensemble learning performance results in addressing class imbalance in data used for predicting total testosterone deficiency in type 2 diabetes patients," <em>Diagnostics</em>, vol. 14, no. 23, Art. no. 2634, Nov. 2024, doi: <a href="https://doi.org/10.3390/diagnostics14232634" target="_blank">10.3390/diagnostics14232634</a>.</p>
+                    <p class="ref-text">M. Kivrak, U. Avci, H. Uzun, and C. Ardic, "The impact of the SMOTE method on machine learning and ensemble learning performance results in addressing class imbalance in data used for predicting total testosterone deficiency in type 2 diabetes patients," <em>Diagnostics</em>, vol. 14, no. 23, Art. no. 2634, Nov. 2024.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.3390/diagnostics14232634" target="_blank">https://doi.org/10.3390/diagnostics14232634</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[2]</span>
-                    <p class="ref-text">A. Fernández, S. García, F. Herrera, and N. V. Chawla, "SMOTE for learning from imbalanced data: Progress and challenges, marking the 15-year anniversary," <em>J. Artif. Intell. Res.</em>, vol. 61, pp. 863–905, 2018, doi: <a href="https://doi.org/10.1613/jair.1.11192" target="_blank">10.1613/jair.1.11192</a>.</p>
+                    <p class="ref-text">A. Fernández, S. García, F. Herrera, and N. V. Chawla, "SMOTE for learning from imbalanced data: Progress and challenges, marking the 15-year anniversary," <em>J. Artif. Intell. Res.</em>, vol. 61, pp. 863–905, 2018.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1613/jair.1.11192" target="_blank">https://doi.org/10.1613/jair.1.11192</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[3]</span>
-                    <p class="ref-text">M. Talebi Moghaddam, Y. Jahani, Z. Arefzadeh, A. Dehghan, M. Khaleghi, M. Sharafi, and G. Nikfar, "Predicting diabetes in adults: Identifying important features in unbalanced data over a 5-year cohort study using machine learning algorithm," <em>BMC Med. Res. Methodol.</em>, vol. 24, Art. no. 220, Sep. 2024, doi: <a href="https://doi.org/10.1186/s12874-024-02341-z" target="_blank">10.1186/s12874-024-02341-z</a>.</p>
+                    <p class="ref-text">M. Talebi Moghaddam, Y. Jahani, Z. Arefzadeh, A. Dehghan, M. Khaleghi, M. Sharafi, and G. Nikfar, "Predicting diabetes in adults: Identifying important features in unbalanced data over a 5-year cohort study using machine learning algorithm," <em>BMC Med. Res. Methodol.</em>, vol. 24, Art. no. 220, Sep. 2024.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1186/s12874-024-02341-z" target="_blank">https://doi.org/10.1186/s12874-024-02341-z</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[4]</span>
-                    <p class="ref-text">Y. Li, Y. Yang, P. Song, L. Duan, and R. Ren, "An improved SMOTE algorithm for enhanced imbalanced data classification by expanding sample generation space," <em>Sci. Rep.</em>, vol. 15, Art. no. 23521, Jul. 2025, doi: <a href="https://doi.org/10.1038/s41598-025-09506-w" target="_blank">10.1038/s41598-025-09506-w</a>.</p>
+                    <p class="ref-text">Y. Li, Y. Yang, P. Song, L. Duan, and R. Ren, "An improved SMOTE algorithm for enhanced imbalanced data classification by expanding sample generation space," <em>Sci. Rep.</em>, vol. 15, Art. no. 23521, Jul. 2025.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1038/s41598-025-09506-w" target="_blank">https://doi.org/10.1038/s41598-025-09506-w</a></span></p>
                 </div>
                 <div class="reference-item">
                     <span class="ref-number">[5]</span>
-                    <p class="ref-text">J. Zhu, S. Pu, J. He, D. Su, W. Cai, X. Xu, and H. Liu, "Processing imbalanced medical data at the data level with assisted-reproduction data as an example," <em>BioData Mining</em>, vol. 17, Art. no. 29, Sep. 2024, doi: <a href="https://doi.org/10.1186/s13040-024-00384-y" target="_blank">10.1186/s13040-024-00384-y</a>.</p>
+                    <p class="ref-text">J. Zhu, S. Pu, J. He, D. Su, W. Cai, X. Xu, and H. Liu, "Processing imbalanced medical data at the data level with assisted-reproduction data as an example," <em>BioData Mining</em>, vol. 17, Art. no. 29, Sep. 2024.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1186/s13040-024-00384-y" target="_blank">https://doi.org/10.1186/s13040-024-00384-y</a></span></p>
                 </div>
             </div>
         </div>
