--- a/13_github_pages/index.html
+++ b/13_github_pages/index.html
@@ -94,16 +94,19 @@
                     <div class="problem-icon">1.28B</div>
                     <h3>Adultos Afetados</h3>
                     <p>A hipertensão afeta aproximadamente 1,28 bilhão de adultos globalmente</p>
+                    <span class="problem-source">Fonte: WHO Global Report 2023 <a href="#ref-6">[6]</a></span>
                 </div>
                 <div class="problem-card">
-                    <div class="problem-icon">50%</div>
+                    <div class="problem-icon">46%</div>
                     <h3>Não Diagnosticados</h3>
-                    <p>Metade dos hipertensos desconhecem sua condição</p>
+                    <p>Quase metade dos hipertensos desconhecem sua condição</p>
+                    <span class="problem-source">Fonte: WHO/Lancet Study 2021 <a href="#ref-7">[7]</a></span>
                 </div>
                 <div class="problem-card">
                     <div class="problem-icon">#1</div>
-                    <h3>Causa de Morte</h3>
-                    <p>Principal fator de risco para doenças cardiovasculares</p>
+                    <h3>Fator de Risco</h3>
+                    <p>Principal fator de risco prevenível para doenças cardiovasculares, causando 10,8 milhões de mortes/ano</p>
+                    <span class="problem-source">Fonte: WHO Fact Sheet 2024 <a href="#ref-8">[8]</a></span>
                 </div>
             </div>
         </div>
@@ -523,8 +526,8 @@
 
             <div class="threshold-section">
                 <h3>Thresholds Clínicos Recomendados</h3>
-                <p class="threshold-explanation">
-                    <strong>O que mostra:</strong> O <strong>threshold</strong> (limiar de decisão) determina a partir de qual probabilidade o modelo classifica
+                <p class="chart-explanation">
+                    <strong>O que mostra:</strong> O threshold (limiar de decisão) determina a partir de qual probabilidade o modelo classifica
                     um paciente como "em risco". Um threshold mais baixo (ex: 0.30) detecta mais casos, mas gera mais alarmes falsos.
                     Um threshold mais alto (ex: 0.80) é mais preciso, mas pode deixar passar alguns casos.
                     A escolha depende do contexto clínico: triagem populacional vs. confirmação diagnóstica.
@@ -776,6 +779,18 @@
                 <div class="reference-item">
                     <span class="ref-number">[5]</span>
                     <p class="ref-text">J. Zhu, S. Pu, J. He, D. Su, W. Cai, X. Xu, and H. Liu, "Processing imbalanced medical data at the data level with assisted-reproduction data as an example," <em>BioData Mining</em>, vol. 17, Art. no. 29, Sep. 2024.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1186/s13040-024-00384-y" target="_blank">https://doi.org/10.1186/s13040-024-00384-y</a></span></p>
+                </div>
+                <div class="reference-item" id="ref-6">
+                    <span class="ref-number">[6]</span>
+                    <p class="ref-text">World Health Organization, "Global report on hypertension: The race against a silent killer," Geneva: WHO, Sep. 2023.<br><span class="ref-link">Link de Acesso: <a href="https://www.who.int/teams/noncommunicable-diseases/hypertension-report" target="_blank">https://www.who.int/teams/noncommunicable-diseases/hypertension-report</a></span></p>
+                </div>
+                <div class="reference-item" id="ref-7">
+                    <span class="ref-number">[7]</span>
+                    <p class="ref-text">NCD Risk Factor Collaboration (NCD-RisC), "Worldwide trends in hypertension prevalence and progress in treatment and control from 1990 to 2019: a pooled analysis of 1201 population-representative studies with 104 million participants," <em>The Lancet</em>, vol. 398, no. 10304, pp. 957–980, Sep. 2021.<br><span class="ref-link">Link de Acesso: <a href="https://doi.org/10.1016/S0140-6736(21)01330-1" target="_blank">https://doi.org/10.1016/S0140-6736(21)01330-1</a></span></p>
+                </div>
+                <div class="reference-item" id="ref-8">
+                    <span class="ref-number">[8]</span>
+                    <p class="ref-text">World Health Organization, "Hypertension: Key facts," WHO Fact Sheets, Mar. 2023. [Online].<br><span class="ref-link">Link de Acesso: <a href="https://www.who.int/news-room/fact-sheets/detail/hypertension" target="_blank">https://www.who.int/news-room/fact-sheets/detail/hypertension</a></span></p>
                 </div>
             </div>
         </div>
